@@ -19,16 +19,6 @@ class ForeignDBFile extends LocalFile {
 		return $file;
 	}
 
-	function getCacheKey() {
-		if ( $this->repo->hasSharedCache() ) {
-			$hashedName = md5($this->name);
-			return wfForeignMemcKey( $this->repo->dbName, $this->repo->tablePrefix,
-				'file', $hashedName );
-		} else {
-			return false;
-		}
-	}
-
 	function publish( $srcPath, $flags = 0 ) {
 		$this->readOnlyError();
 	}
